--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^1.41.2",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
