Email Verification Added

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 PORT = 5000
 MONGO_URI = mongodb+srv://eyuelfrew430:7378atmjoeltheking@clustor-1.m2wyni8.mongodb.net/?retryWrites=true&w=majority
-JWT_SECRET = joelfrew
-
-
-
+JWT_SECRET=eyuelfrewbeza
+USER=eyumanfrew@gmail.com
+PASS=elsf srao pqds cxcl
